# omtb

./: README.md
omtb_control/: CMakeLists.txt  package.xml  setup.py
omtb_control/include/: moveit_bridge.h
omtb_control/include/omtb_control/: omtb_kinematics.h
omtb_control/launch/: automove_1tb_room1.launch  automove_1tb_room2.launch  env1.launch  manipulation.launch  pick_and_place_1tb_room2.launch  pick_and_place_2tb_room2.launch  turtlebot3_key.launch
omtb_control/nodes/: automove_room1.py  automove_room2.py  env1.py  pick_and_place_robot1.py  pick_and_place_robot2.py  tb3_teleop_key.py
omtb_control/src/: moveit_bridge.cpp  omtb_kinematics.cpp  omtb_moveit.cpp
omtb_description/: CMakeLists.txt  package.xml
omtb_description/omtb_description/urdf/: open_manipulator_with_tb3.gazebo.xacro  open_manipulator_with_tb3_waffle.urdf.xacro
omtb_description/turtlebot3_description/urdf/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle_for_open_manipulator.urdf.xacro
omtb_gazebo/: CMakeLists.txt  package.xml
omtb_gazebo/config/: gazebo_controller.yaml  joint_controller.yaml
omtb_gazebo/launch/: 1tb_env1.launch  1tb_room1.launch  1tb_room2.launch  2tb_room2.launch  2tb_room2_ramp1.launch  2tb_room2_ycb.launch  empty_world.launch  joint_controller.launch  robot.launch
omtb_gazebo/models/cabinet/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
omtb_gazebo/models/drc_practice_hinged_door/: model.sdf
omtb_gazebo/models/ramp1_10/: model.config  model.sdf
omtb_gazebo/models/ramp1_10/meshes/: ramp1_10.dae
omtb_gazebo/models/ramp1_5/: model.config  model.sdf
omtb_gazebo/models/ramp1_5/meshes/: ramp1_5.dae
omtb_gazebo/models/room1/: model.config  model.sdf
omtb_gazebo/models/room2/: model.config  model.sdf
omtb_gazebo/models/room2/bridge1/: model.config  model.sdf
omtb_gazebo/models/room2_ramp1/: model.config  model.sdf
omtb_gazebo/models/room2_with_ramp1/: model.config  model.sdf
omtb_gazebo/models/room2_with_ramp1/ramp1/: model.config  model.sdf
omtb_gazebo/models/room2_ycb/: model.sdf
omtb_gazebo/models/support_column/: model.config  model.sdf
omtb_gazebo/models/ycb_banana/: model.config  model.sdf
omtb_gazebo/models/ycb_banana/meshes/: ycb_banana.dae
omtb_gazebo/models/ycb_base/: model.config  model.sdf
omtb_gazebo/models/ycb_blue_wood_block/: model.config  model.sdf
omtb_gazebo/models/ycb_green_wood_block/: model.config  model.sdf
omtb_gazebo/models/ycb_orange_wood_block/: model.config  model.sdf
omtb_gazebo/models/ycb_potted_meat_can/: model.config  model.sdf
omtb_gazebo/models/ycb_potted_meat_can/meshes/: ycb_potted_meat_can.dae
omtb_gazebo/models/ycb_pudding_box/: model.config  model.sdf
omtb_gazebo/models/ycb_pudding_box/meshes/: ycb_pudding_box.dae
omtb_gazebo/models/ycb_red_wood_block/: model.config  model.sdf
omtb_gazebo/models/ycb_yellow_wood_block/: model.config  model.sdf
omtb_gazebo/worlds/: env1.world  room1.world  room2.world  room2_ramp1.world  room2_with_ramp1.world  room2_ycb.world
omtb_ml/: CMakeLists.txt  package.xml  setup.py
omtb_ml/env/: environment_rooms.py  respawnGoal.py
omtb_ml/launch/: omtb_dqn.launch  result_graph.launch
omtb_ml/nodes/: omtb_dqn  result_graph
omtb_moveit/: .setup_assistant  CMakeLists.txt  package.xml
omtb_moveit/config/: robot1.srdf  ros_controllers.yaml
omtb_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
omtb_slam2d/: CMakeLists.txt  package.xml  setup.py
omtb_slam2d/config/: assets_writer_vlp16.lua  robot1_lds_2d.lua  robot2_lds_2d.lua
omtb_slam2d/launch/: assets_writer_vlp16.launch  cartographer.launch  cartographer_vlp16.launch  demo.launch  hector.launch  karto.launch  map_merge_hector.launch  move_base.launch  navigation_1tb_room2.launch  navigation_2tb_room2.launch  slam.launch
omtb_slam2d/maps/: room2.yaml  room2_10mm.yaml  room2_50mm.pgm
omtb_slam2d/param/: costmap_common_params_waffle.yaml  global_costmap_params_grab.yaml  local_costmap_params_grab.yaml
omtb_slam2d/rviz/: map_merge_hector.rviz  omtb_cartographer.rviz  omtb_gmapping.rviz  omtb_navigation_1tb_room2.rviz  omtb_navigation_2tb_room2_robot1.rviz  omtb_navigation_2tb_room2_robot2.rviz
omtb_slam3d/: CMakeLists.txt  package.xml  setup.py
omtb_slam3d/rviz/: omtb_rtab.rviz
open_manipulator_msgs/: README.md
slam_lidar/: CMakeLists.txt  package.xml  setup.py
slam_lidar/config/: robot1_vlp16.lua  robot2_lds_2d.lua
slam_lidar/launch/: amcl.launch  assets_writer_vlp16.launch  cartographer.launch  cartographer_vlp16.launch  demo.launch  gmapping.launch  karto.launch  loam_velodyne.launch  map_merge_hector.launch  move_base.launch  navigation_1tb_room2.launch  navigation_2tb_room2.launch  slam.launch
slam_lidar/maps/: room2_10mm.pgm  room2_50mm.yaml
slam_lidar/param/: costmap_common_params_waffle.yaml  costmap_common_params_waffle_grab.yaml  dwa_local_planner_params_waffle_grab.yaml  local_costmap_params.yaml  move_base_params_grab.yaml
slam_lidar/rviz/: omtb_cartographer.rviz  omtb_cartographer_vlp16.rviz  omtb_hector.rviz  omtb_karto.rviz  omtb_navigation_1tb_room2.rviz  omtb_navigation_2tb_room2_robot1.rviz
slam_vision/: CMakeLists.txt  package.xml  setup.py
slam_vision/launch/: orb_slam2.launch  rtab.launch
slam_vision/maps/: cloud_0.05.pcd
slam_vision/param/: costmap_common_params_waffle.yaml  rgbd.yaml  stereo.yaml
