<?xml version="1.0"?>
<package format="2">
  <name>omtb_control</name>
  <version>1.2.1</version>
  <description>
    Provides controllers for omtb.
  </description>
  <license>Apache 2.0</license>
  <author email="dqszfuyu@163.com">Yu Fu</author>
  <author>Yu Fu</author>
  <maintainer email="dqszfuyu@163.com">Yu Fu</maintainer>
  <url type="repository">https://github.com/HITROS/omtb</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>open_manipulator_msgs</depend>
  <depend>ar_track_alvar_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>smach</depend>
  <depend>smach_ros</depend>
  <depend>tf</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
</package>
