<?xml version="1.0"?>
<package format="2">
  <name>omtb_gazebo</name>
  <version>1.1.0</version>
  <description>
    Simulation package using gazebo for OpenManipulator with TurtleBot3
  </description>
  <license>Apache 2.0</license>
  <author email="dqszfuyu@163.com">Yu Fu</author>
  <maintainer email="dqszfuyu@163.com">Yu Fu</maintainer>
  <url type="repository">https://github.com/HITROS/omtb</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
