<?xml version="1.0"?>
<package format="2">
  <name>omtb_ml</name>
  <version>1.0.0</version>
  <description>
    The package includes applications using Machine Learning.
  </description>
  <license>Apache 2.0</license>
  <author email="dqszfuyu@163.com">Yu Fu</author>
  <author>Yu Fu</author>
  <maintainer email="dqszfuyu@163.com">Yu Fu</maintainer>
  <url type="repository">https://github.com/HITROS/omtb</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
