<?xml version="1.0"?>
<package format="2">
  <name>slam_lidar</name>
  <version>1.2.1</version>
  <description>
    The omtb_slam package provides roslaunch scripts for starting the 2D SLAM
  </description>
  <license>Apache 2.0</license>
  <author email="dqszfuyu@163.com">Yu Fu</author>
  <author>Yu Fu</author>
  <maintainer email="dqszfuyu@163.com">Yu Fu</maintainer>
  <url type="repository">https://github.com/HITROS/omtb</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
</package>
